# demo-gate

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/demo_gate/: __init__.py  _middleware.py  _ratelimit.py  _routes.py  _service.py
src/demo_gate/static/: demo-gate.html
tests/: test_gate.py
